Source/WebCore/html/HTMLLabelElement.cpp
@@ -36,12 +36,14 @@ namespace WebCore {
 
 using namespace HTMLNames;
 
-static LabelableElement* nodeAsSupportedLabelableElement(Node* node)
+static LabelableElement* firstElementWithIdIfLabelable(TreeScope& treeScope, const AtomicString& id)
 {
-    if (!is<LabelableElement>(node))
+    auto* element = treeScope.getElementById(id);
+    if (!is<LabelableElement>(element))
         return nullptr;
-    LabelableElement& element = downcast<LabelableElement>(*node);
-    return element.supportLabels() ? &element : nullptr;
+
+    auto& labelableElement = downcast<LabelableElement>(*element);
+    return labelableElement.supportLabels() ? &labelableElement : nullptr;
 }
 
 inline HTMLLabelElement::HTMLLabelElement(const QualifiedName& tagName, Document& document)
@@ -74,9 +76,7 @@ LabelableElement* HTMLLabelElement::control()
         return nullptr;
     }
     
-    // Find the first element whose id is controlId. If it is found and it is a labelable form control,
-    // return it, otherwise return 0.
-    return nodeAsSupportedLabelableElement(treeScope().getElementById(controlId));
+    return inDocument() ? firstElementWithIdIfLabelable(treeScope(), controlId) : nullptr;
 }
 
 HTMLFormElement* HTMLLabelElement::form() const
